@@ -898,9 +898,10 @@ void debug_printf (int debuglevel, const char * format , ...)
     	//Hacer aparecer menu, siempre que el driver no sea null ni.. porque no inicializado tambien? no inicializado
     	if (debuglevel==VERBOSE_ERR) {
 
-			//en el caso de stdout, no aparecera ventana igualmente, pero el error ya se vera por consola
+			//en el caso de simpletext y null, no aparecera ventana igualmente, pero el error ya se vera por consola
+			//en stdout si que "dibuja" la ventana por consola, para que se envie a speech
         	if (
-				!strcmp(scr_driver_name,"stdout") ||
+				//!strcmp(scr_driver_name,"stdout") ||
         		!strcmp(scr_driver_name,"simpletext") ||
         		!strcmp(scr_driver_name,"null") 
 			)
