@@ -62,6 +62,7 @@ Improved accesibility:
 -say when a selected menu item is not available
 -Mac OS speech filter doesn't fail anymore when message has "-"
 -selected item menu is called now "Selected item" (was called "Active item" before)
+-when an error is generated on stdout driver, the message is send to text-to-speech
 
 Improved assembler: added defs command
 Improved AY Sheet: now you can select which AY Chip to show
